<resources>
    <string name="app_name">travelprinter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="print_world">Printer!</string>
    <string name="two_scan">scan</string>
    <string name="setting_tile">Setting</string>
    <string name="reverse_title">Barcode reversal</string>
    <string name="setting_password_title">Input password</string>
    <string name="additional_code_title">Input additional code</string>
    <string name="dialog_comfirm">ConFirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="save_success">Save success</string>
    <string name="password_error">Password error</string>
    <string name="operation_result">Result</string>
    <string name="operation_fail">Operation failed</string>
    <string name="error_trade_number">Trace number format error</string>
    <string name="error_addition_number">Additional code format error</string>
    <string name="error_ipaddress">IP format error</string>
    <string name="error_port">Invalid port number</string>
    <string name="print_test">Print test</string>
    <string name="qrcode_verify">QR code verification</string>
    <string name="magnetic_card_test">Magnetic stripe card test</string>
    <string name="rfid_test">RFID test</string>
    <string name="track1">Track1</string>
    <string name="track2">Track2</string>
    <string name="track3">Track3</string>
    <string name="read_card">Swipe card</string>
    <string name="please">Please swipe card</string>
    <string name="error_security">No permission to read/write serial port</string>
    <string name="error_unknown">Could not open serial port, due to unknown error</string>
    <string name="qrcode_result">Scanning result</string>
    <string name="pcsc_test">IC card test</string>
    <string name="identity_test">ID card test</string>
    <string name="error">Error</string>
    <string name="error_unexpect">Unknown error</string>
    <string name="error_nolib">Library not found</string>
    <string name="error_open_magnetic_card">Could not open magnetic card device</string>
    <string name="printertype">Printer Type:</string>
    <string name="selectprinter">Please choose printer type</string>
    <string name="not_support">Not support multi-language printer</string>
    <string name="noPaper">No paper</string>
    <string name="ptintInit">Printer initialing... Please try again after a few seconds. </string>
    <string name="dlg_ok">Confirm</string>
    <string name="noPaperNotice">No paper, please put paper in and retry</string>
    <string name="LowBattery">Low battery, please connect the charger!</string>
    <string name="retry">Retry</string>
    <string name="overTemp">over temp !</string>
    <string name="CommonVer">Chinese-English printer</string>
    <string name="MultilingualVer">Multi-language printer</string>
    <string name="PrintTemp1">THP Temp:before print:20 degrees</string>
    <string name="PrintTemp2">THP Temp:after print:30 degrees</string>
    <string name="CharTest">ABCDEFGHIGKLMNOPQRSTUVWXYZabcdefghigklmnopqrstuvwxyz0123456789-!@#$%^&amp;*()?|\.</string>
    <string name="Multilingual">Data for multi-language printing:
</string>
    <string name="Language0">Print digits：1234567890
</string>
    <string name="Language1">Happy new year!
</string>
    <string name="Language2">新年快乐!
</string>
    <string name="Language3">明けましておめでとうございます!
</string>
    <string name="Language4">سنة جديدة سعيدة!    </string>
    <string name="Language5">새해 복 많이 받으세요!    </string>
    <string name="Language6">Feliz Año Nuevo!    </string>
    <string name="Language7">Glückliches neues Jahr!
</string>
    <string name="Language8">Bonne année!
</string>
    <string name="Language9">Godt Nytår!
</string>
    <string name="Language10">с Новым годом!
</string>
    <string name="Language11">नया साल मुबारक हो
</string>
    <string name="Language12">Šťastný Nový Rok!
</string>
    <string name="Language13">ปีใหม่มีความสุข
</string>
    <string name="Language14">"שנה טובה!
</string>
    <string name="Language15">Hyvää uutta vuotta!
</string>
    <string name="Language16">Chúc mừng năm mới!
</string>
    <string name="Language17">Feliç any nou!
</string>
    <string name="Language18">Szczęśliwego nowego roku!
</string>
    <string name="Language19">سال نو مبارک!
</string>
    <string name="ic_connect">Connect</string>
    <string name="ic_iccid">Get ICCID</string>
    <string name="ic_imsi">Get IMSI</string>
    <string name="idcard_czz">Proceeding...</string>
    <string name="idcard_ljdkq">Connecting to ID reader...</string>
    <string name="idcard_ljdkqcg">Connect reader success</string>
    <string name="idcard_wfljdkq">Connect reader failed</string>
    <string name="idcard_dqsbhcs">Read failed or time out</string>
    <string name="idcard_xm">Name: </string>
    <string name="idcard_xb">Gender: </string>
    <string name="idcard_mz">Nation: </string>
    <string name="idcard_csrq">Birthday: </string>
    <string name="idcard_dz">Address: </string>
    <string name="idcard_sfhm">ID：</string>
    <string name="idcard_qzjg">Issuing authority：</string>
    <string name="idcard_yxqx">"Exp date: "</string>
    <string name="idcard_hqsfzxx">Get ID card information</string>
    <string name="idcard_dkts">Please put your ID card on specific area......</string>
    <string name="idcard_zbdsfsbmk">ID identification module not found</string>
    <string name="idcard_wazsfsbmk">Setup ID identification module?</string>
    <string name="idcard_azsb">Setup failed</string>
    <string name="idcard_xzgn">Select function</string>
    <string name="idcard_xzsfsbfs">Please choose a mode for ID identification</string>
    <string name="idcard_sxtsb">Identification by camera OCR</string>
    <string name="idcard_dkqsb">"Identification by card reader"</string>
    <string name="bl_dy">Print</string>
    <string name="bl_qj">Forward</string>
    <string name="bl_ht">Backward</string>
    <string name="bl_tc">Quit</string>
    <string name="bl_xsdxx">Displayed Info: </string>
    <string name="bl_hqsfzxx">Get ID information</string>
    <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
   <string name="app_picker_name">Applications</string>
  <string name="bookmark_picker_name">Bookmarks</string>
  <string name="button_add_calendar">Add to calendar</string>
  <string name="button_add_contact">Add contact</string>
  <string name="button_book_search">Book Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_dial">Dial number</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product search</string>
  <string name="button_search_book_contents">Search contents</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="button_wifi">Connect to Network</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="history_clear_text">Clear history</string>
  <string name="history_clear_one_history_text">Clear</string>
  <string name="history_email_title">Barcode Scanner history</string>
  <string name="history_empty">Empty</string>
  <string name="history_empty_detail">No barcode scans have been recorded</string>
  <string name="history_send">Send history</string>
  <string name="history_title">History</string>
  <string name="menu_encode_mecard">Use MECARD</string>
  <string name="menu_encode_vcard">Use vCard</string>
  <string name="menu_help">Help</string>
  <string name="menu_history">History</string>
  <string name="menu_share">Share</string>
  <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_google_books">Google</string>
  <string name="msg_google_product">Google</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_redirect">Redirect</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_results">Results</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  <string name="msg_share_text">Or type some text and press Enter</string>
  <string name="msg_sure">Are you sure?</string>
  <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_auto_focus_title">Use auto focus</string>
  <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
  <string name="preferences_bulk_mode_title">Bulk scan mode</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_decode_1D_title">1D barcodes</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
  <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
  <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
  <string name="preferences_disable_exposure_title">No exposure</string>
  <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
  <string name="preferences_front_light_title">Use front light</string>
  <string name="preferences_front_light_auto">Automatic</string>
  <string name="preferences_front_light_off">Off</string>
  <string name="preferences_front_light_on">On</string>
</resources>