<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:keepScreenOn="true"
                android:orientation="vertical" >

    <TextView
            android:id="@+id/textVersion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:textSize="18dip"
            />


    <LinearLayout
            android:id="@+id/printselect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

        <TextView
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="18sp"
                android:visibility="gone"
                android:text="@string/printertype" >
        </TextView>

        <Spinner
                android:id="@+id/printer_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/selectprinter"
                android:visibility="gone"
                android:entries="@array/printertype" />
    </LinearLayout>


    <Button
            android:id="@+id/ButtonCharacterDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/printselect"
            android:layout_below="@+id/printselect"
            android:layout_marginTop="20dip"
            android:text="@string/bl_dy" />

    <Button
            android:id="@+id/ButtonCodeDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ButtonCharacterDemo"
            android:layout_below="@+id/ButtonCharacterDemo"
            android:text="@string/bl_qj"
            android:visibility="gone"
            />

    <Button
            android:id="@+id/ButtonImageDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ButtonCodeDemo"
            android:layout_below="@+id/ButtonCodeDemo"
            android:text="@string/bl_ht"
            android:visibility="gone"/>

    <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ButtonCodeDemo"
            android:layout_marginTop="20dip"
            android:layout_below="@+id/ButtonImageDemo"
            android:text="@string/bl_tc" />

    <TextView
            android:id="@+id/TextViewSerialRx"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_alignLeft="@+id/ButtonCharacterDemo"
            android:layout_alignRight="@+id/ButtonImageDemo"
            android:layout_below="@+id/quit"
            android:ems="10" />

</RelativeLayout>
